@@ -247,9 +247,10 @@ typedef enum
   isDeterministic = 4,
   isPrivate = 8,
   isBuiltin = 16,
-  isUDF = 32,
-  propagatesInputNodes = 64,
-  mustCopyInputNodes = 128
+  isBuiltinExternal = 32,
+  isUDF = 64,
+  propagatesInputNodes = 128,
+  mustCopyInputNodes = 256
 } AnnotationFlags;
 
 };
