@@ -154,6 +154,8 @@ public:
 
   }
 
+  bool accessesDynCtx() const { return true; }
+
   CODEGEN_DECL();
 };
 
