@@ -10,6 +10,8 @@ version 2.2
   * Fixed bug 917923 (bug in copying outer var values into the eval dynamic context)
   * Fixed bug 924063 (sentence is incorrectly incremented when token characters end without sentence terminator)
   * Fixed bug 909126 (bug in cloning of var_expr)
+  * Fixed bug 928631 (external builtin function were not executed in the module they
+    were declared)
   * Fixed bug in destruction of exit_catcher_expr
   * Types-related optimizations for runtime operators (comparisons, FnBoolean, Or, And,
     Compare, instance-of, cast, castable, treat, promote).
